set back binarycompaction